Update help file to match new name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "fora-hvs",
 	"version": "1.0.1",
-	"description": "For.A Hanabi HVS-100/110 module for Companion.",
+	"description": "For.A Hanabi Video Switcher module for Companion.",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -13,8 +13,8 @@
 		"Video Switcher"
 	],
 	"manufacturer": "For.A",
-	"product": "Hanabi HVS-100/110",
-	"shortname": "hvs-100",
+	"product": "Hanabi Video Switchers",
+	"shortname": "fora-hvs",
 	"dependencies": {
 		"ws": "^7.2.1"
 	}
