--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 	"author": "Michael Allen <michael.allen@barefootchurch.com>",
 	"license": "MIT",
 	"keywords": [
-		"Vision Mixer",
-		"Video Switcher"
+		"Vision Mixer"
 	],
 	"manufacturer": "For.A",
 	"product": "Hanabi Video Switchers",
