--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fora-hvs",
-	"version": "1.2.7",
+	"version": "1.2.8",
 	"description": "For.A Hanabi Video Switcher module for Companion.",
 	"main": "index.js",
 	"scripts": {
@@ -22,5 +22,14 @@
 		"type": "git",
 		"url": "git+https://github.com/bitfocus/companion-module-fora-hvs.git"
 	},
-	"api_version": "1.0.0"
+	"api_version": "1.0.0",
+	"dependencies": {
+		"@companion-module/base": "~1.0.2",
+		"node-fetch": "^2.6.0",
+		"websocket": "^1.0.34",
+		"ws": "^8.16.0"
+	},
+	"devDependencies": {
+		"@companion-module/tools": "^0.5.1"
+	}
 }
