--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
 	"name": "fora-hvs",
-	"version": "1.2.6",
-	"description": "For.A Hanabi Video Switcher module for Companion.",
+	"version": "2.0.0",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Michael Allen <michael.allen@barefootchurch.com>",
 	"license": "MIT",
-	"keywords": [
-		"Vision Mixer"
-	],
-	"manufacturer": "For.A",
-	"product": "Hanabi Video Switchers",
-	"shortname": "fora-hvs",
-	"homepage": "https://github.com/bitfocus/companion-module-fora-hvs#readme",
 	"bugs": {
 		"url": "https://github.com/bitfocus/companion-module-fora-hvs/issues"
 	},
@@ -22,5 +13,13 @@
 		"type": "git",
 		"url": "git+https://github.com/bitfocus/companion-module-fora-hvs.git"
 	},
-	"api_version": "1.0.0"
+	"dependencies": {
+		"@companion-module/base": "~1.0.2",
+		"node-fetch": "^2.6.0",
+		"websocket": "^1.0.34",
+		"ws": "^8.16.0"
+	},
+	"devDependencies": {
+		"@companion-module/tools": "^0.5.1"
+	}
 }
